--- a/xen/arch/arm/vgic/Makefile
+++ b/xen/arch/arm/vgic/Makefile
@@ -5,3 +5,4 @@ obj-y += vgic-mmio.o
 obj-y += vgic-mmio-v2.o
 obj-$(CONFIG_GICV3) += vgic-mmio-v3.o
 obj-y += vgic-init.o
+obj-$(CONFIG_HAS_ITS) += vgic-its.o
